apps/canary/prototype/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: v-proto
  annotations:
    argocd.argoproj.io/sync-wave: '90'
spec:
  replicas: 10
  revisionHistoryLimit: 1
  rollbackWindow: # https://argo-rollouts.readthedocs.io/en/stable/features/rollback/
    revisions: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: v-proto
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/component: v-proto
        app.kubernetes.io/name: app
    spec:
      containers:
      - name: v-proto
        image: ybelval/rollouts-demo:green
        imagePullPolicy: Never
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
#        startupProbe: # sleep between 15 and 30 seconds
#          exec:
#            command:
#              - bash
#              - -c
#              - |-
#                sleep $(( (RANDOM % 1) + 0 ))
          timeoutSeconds: 30
  strategy:
    canary:
      canaryService: v-proto-preview
      stableService: v-proto-stable
      scaleDownDelaySeconds: 3600
      scaleDownDelayRevisionLimit: 1
      trafficRouting:
        nginx:
          stableIngress: v-proto
      steps:
      - setWeight: 20
      - setCanaryScale: # scale replicaset to 100% with only 20% traffic
          weight: 100
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: v-proto-other-1
  annotations:
    argocd.argoproj.io/sync-wave: '100'
spec:
  replicas: 10
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: v-proto-other-1
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/component: v-proto-other-1
        app.kubernetes.io/name: app
    spec:
      containers:
        - name: v-proto-other-1
          image: ybelval/rollouts-demo:green
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
          startupProbe: # sleep between 15 and 30 seconds
            exec:
              command:
                - bash
                - -c
                - |-
                  sleep $(( (RANDOM % 15) + 15 ))
            timeoutSeconds: 30
  strategy:
    blueGreen:
      maxUnavailable: 0
      activeService: v-proto-other-1
      scaleDownDelaySeconds: 3600
      scaleDownDelayRevisionLimit: 1
