apps/canary/prototype/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: v-proto
spec:
  ingressClassName: nginx
  rules:
    - host: proto.dev.argoproj.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: v-proto-stable
                port:
                  name: http
